--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&family=Jua&family=Sunflower:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap');
 
 * {
   font-family: 'IBM Plex Sans KR', sans-serif;
@@ -6,7 +7,7 @@
 
 body {
   margin: 0;
-  background: url(images/background-sky.avif);
+  /* background: url(images/background-sky.avif); */
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -14,18 +15,84 @@ a {
   text-decoration: none;
   color: black;
 }
+.header {
+  padding: 40px 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+/* 시계 */
+.clock {
+  width: 350px;
+  height: 70px;
+  background: rgba(235, 0, 255, 0.11);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(40px);
+}
+
+.clock span {
+  font-size: 40px;
+  width: 70px;
+  display: inline-block;
+  text-align: center;
+  position: relative;
+}
+
+.clock span::after {
+  font-size: 16px;
+  position: absolute;
+  bottom: -5px;
+  left: 50%;
+  transform: translate(-50%);
+}
+#hrs::after {
+  content: 'HOURS';
+}
+#min::after {
+  content: 'MINS';
+}
+#sec::after {
+  content: 'SEC';
+}
+
+h1 {
+  font-family: 'Nanum Pen Script', cursive;
+  font-size: 60px;
+}
 .container {
   background: #fff;
   min-height: 100vh;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  background-image: url(images/background-sky.avif);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .input-area {
   margin-bottom: 10px;
 }
+#task-input {
+  border-radius: 10px;
+  border: 1px solid lightgray;
+  padding-left: 20px;
+  padding: 7px 7px;
+}
+#add-button {
+  width: 30px;
+  margin-left: 6px;
+  border-radius: 10px;
+  border: 1px solid lightgray;
+}
+#task-board {
+  border: none;
+}
+
 .task-area {
-  border: 1px solid black;
+  border: none;
 }
 .task-tabs {
   display: flex;
@@ -41,9 +108,9 @@ a {
   height: 6px;
   position: absolute;
   background: blue;
-  width: 50px;
-  left: 7px;
-  top: 52px;
+  width: 60px;
+  left: 0px;
+  top: 51px;
   padding: 0;
 }
 
@@ -51,7 +118,10 @@ a {
   display: flex;
   justify-content: space-between;
   padding: 1em;
+  margin: 5px 0;
   border-bottom: 1px dashed #676767;
+  font-size: 20px;
+  border-radius: 10px;
 }
 
 .task-done {
@@ -68,7 +138,7 @@ i:hover {
 }
 
 .pinned-task {
-  background: yellow;
+  background: #faffaf;
   font-weight: 600;
 }
 
@@ -85,5 +155,16 @@ i:hover {
   .input-area {
     display: flex;
     justify-content: center;
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    display: block;
+    text-align: center;
+  }
+  .clock {
+    width: 100%;
+    text-align: center;
   }
 }
